# py_dl

./: .gitignore  README.md  pyproject.toml
example/: adaline.py  cnn_mnist.py  deepfm.py  fm.py  fm_titanic.py  logistic_regression.py  logistic_regression_multiclass.py  lr_quadratic.py  lr_quadratic_compact.py  nn_iris.py  optimizer_example.py  rnn_sin_square.py  rnn_welding.py  sobel.py  sobel_train.py  wide_and_deep.py
py_dl/: __init__.py  py_dl.py
py_dl/core/: __init__.py  core.py  graph.py  node.py
py_dl/layer/: __init__.py  layer.py
py_dl/ops/: __init__.py  loss.py  metrics.py  ops.py
py_dl/optimizer/: __init__.py  optimizer.py
py_dl/trainer/: saver.py  simple_trainer.py  trainer.py
